
IF(WIN32)
	# Od : no optimisation; Ot: favor code speed over code size.
	if(DO_NOT_OPTIMIZE_WINDOWS_RELEASE)
		SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Od /Ot")
	endif(DO_NOT_OPTIMIZE_WINDOWS_RELEASE)
ELSE(WIN32)
	# CGAL needs rounding math to compile well with GCC
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frounding-math")
ENDIF(WIN32)

AUX_SOURCE_DIRECTORY(. SUB_SOURCES)
AUX_SOURCE_DIRECTORY(generated SOURCES)
SET(SOURCES ${SOURCES} ${SUB_SOURCES})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/gx_rvd)



IF (WIN32)
   INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/glut-win32/include)
   LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/glut-win32/lib)
   ADD_EXECUTABLE(gx_rvd ${SOURCES})
ELSE (WIN32)
   LINK_DIRECTORIES(${CGAL_DIR}/lib/)
   LINK_DIRECTORIES(/usr/X11R6/lib)
   ADD_EXECUTABLE(gx_rvd ${SOURCES})
ENDIF (WIN32)

ADD_DEPENDENCIES(gx_rvd geex)

IF (WIN32)
   TARGET_LINK_LIBRARIES(gx_rvd geex opengl32 glu32)
   SET_TARGET_PROPERTIES(gx_rvd PROPERTIES LINK_FLAGS "/FORCE:MULTIPLE")
ELSE (WIN32)
   TARGET_LINK_LIBRARIES(gx_rvd geex glut GL GLU CGAL)
ENDIF (WIN32)

