IF(WIN32)
	# Od : no optimisation; Ot: favor code speed over code size.
	if(DO_NOT_OPTIMIZE_WINDOWS_RELEASE)
		SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Od /Ot")
	endif(DO_NOT_OPTIMIZE_WINDOWS_RELEASE)
ELSE(WIN32)
	# CGAL needs rounding math to compile well with GCC
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frounding-math")
ENDIF(WIN32)

#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/spm/cmake/")
#find_package(Knitro REQUIRED)

AUX_SOURCE_DIRECTORY(. SUB_SOURCES)
AUX_SOURCE_DIRECTORY(rvd SUB_SOURCES)
SET(SOURCES ${SOURCES} ${SUB_SOURCES})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/spm)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/spm/rvd)
INCLUDE_DIRECTORIES(${CGAL_DIR}/include)
INCLUDE_DIRECTORIES(${KNITRO_INCLUDE_DIR})

IF (WIN32)
   INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/glut-win32/include)
   LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/glut-win32/lib)
   ADD_EXECUTABLE(spm ${SOURCES})
ELSE (WIN32)
   LINK_DIRECTORIES(/usr/X11R6/lib)
   ADD_EXECUTABLE(spm ${SOURCES})
ENDIF (WIN32)

ADD_DEPENDENCIES(spm geex)



ADD_DEFINITIONS(-DNOMINMAX) 

IF (WIN32)
	#TARGET_LINK_LIBRARIES(spm geex opengl32 glu32 ${KNITRO_LIBRARY})
   TARGET_LINK_LIBRARIES(spm geex opengl32 glu32)
   SET_TARGET_PROPERTIES(spm PROPERTIES COMPILE_FLAGS "/openmp")
   # SET_TARGET_PROPERTIES(gx_ccvt PROPERTIES LINK_FLAGS "/FORCE:MULTIPLE /LARGEADDRESSAWARE")
    SET_TARGET_PROPERTIES(spm PROPERTIES LINK_FLAGS "/LARGEADDRESSAWARE")
ELSE (WIN32)
   TARGET_LINK_LIBRARIES(spm geex  geex glut GL GLU CGAL gomp)
   SET_TARGET_PROPERTIES(spm PROPERTIES COMPILE_FLAGS "-fopenmp")
ENDIF (WIN32)
